# ubb

Semester 1/Fundamentals of Programming/a10/: board.py  game.py  gui.py  test.py  ui.py
Semester 1/Fundamentals of Programming/a10/a3/: ComplexityOfSortingAlgorithms.py  test.py  test2.py
Semester 1/Fundamentals of Programming/a10/a4/: p3.py  p3_naive.py  p8.py  p9_backtracking.py  p9_iterative.py
Semester 1/Fundamentals of Programming/a10/a7/src/: students.txt
Semester 1/Fundamentals of Programming/a2/: ExchangeSort.py
Semester 1/Fundamentals of Programming/a4/: p1_b.py  p2.py  p3_dynamic_programming.py  p4.py
Semester 1/Fundamentals of Programming/a5/src/: program.py
Semester 1/Fundamentals of Programming/a6/src/: functions.py  start.py  ui.py
Semester 1/Fundamentals of Programming/a7/src/: start.py
Semester 1/Fundamentals of Programming/a8/src/: Books.txt
Semester 1/Mathematical Analysis/HW10/: HW10.py
Semester 1/Mathematical Analysis/HW11/: hw11.py
Semester 1/Mathematical Analysis/HW4/: sum.py
Semester 1/Mathematical Analysis/HW5/: hw5.py
Semester 1/Mathematical Analysis/HW7/: hw7.py
Semester 1/Mathematical Analysis/HW8/: hw8.py
Semester 2/Object Oriented Programming/a2-3/: CMakeLists.txt  README.md  domain.c  domain.h  dynamicArray.c  dynamicArray.h  repository.c  repository.h  service.c  service.h  ui.c  ui.h  undo_redo.c  undo_redo.h
Semester 2/Object Oriented Programming/oop-a1/: CMakeLists.txt  problem2  problem2.c
Semester 2/Object Oriented Programming/oop-a6-7/: CMakeLists.txt  Exceptions.cpp  Exceptions.h  csvWL.cpp  csvWL.h
Semester 2/Object Oriented Programming/oop-a8-9/: CMakeLists.txt  Exceptions.h  FileWatchList.cpp  FileWatchList.h  HTMLwl.cpp  HTMLwl.h  Movie.cpp  Movie.h  Repository.cpp  Repository.h  admin.cpp  admin.h  admin.ui  appgui.cpp  appgui.h  appgui.ui  csvWL.h  main.cpp  service.cpp  service.h  sterge.cpp  ui.cpp  ui.h  user.cpp  user.h  user.ui  watchlisttablemodel.cpp  watchlisttablemodel.h
(+36 files in other folders)
